--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: db_postgres
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=ecommerce
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ecommerce
     ports:
       - "5432:5432"
     volumes:
@@ -18,14 +18,21 @@ services:
       retries: 5
 
   app:
-    build: .
+    build: ./app
     container_name: app_python
+    environment:
+      PGHOST: db
+      PGPORT: 5432
+      PGUSER: postgres
+      PGPASSWORD: postgres
+      PGDATABASE: ecommerce
     working_dir: /app
     volumes:
-      - ./data:/data
+      - ./data:/data # arquivo de entrada
     depends_on:
       db:
         condition: service_healthy
+    command: bash -lc "python init_db.py && python load_data.py && python main.py"
 
 volumes:
   db_data:
