--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       retries: 5
 
   app:
-    build: ./app
+    build: .
     container_name: app_python
     environment:
       PGHOST: db
@@ -30,10 +30,11 @@ services:
     working_dir: /app
     volumes:
       - ./data:/data # arquivo de entrada
+      - ./src:/app/src # Mapeia o código-fonte para dentro do contêiner
     depends_on:
       db:
         condition: service_healthy
-    command: bash -lc "python init_db.py && python load_data.py && python main.py"
+    command: python src/tp1_3.2.py
 
 volumes:
   db_data:
