--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     build: .
     container_name: app_python
     environment:
+      PYTHONUNBUFFERED: 1
       PGHOST: db
       PGPORT: 5432
       PGUSER: postgres
