--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: python src/tp1_3.2.py
+    command: tail -f /dev/null
 
 volumes:
   db_data:
