acho que terminamos

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ./data:/app/data # arquivo de entrada
       - ./src:/app/src # Mapeia o código-fonte para dentro do contêiner
       - ./sql:/app/sql # Mapeia os scripts SQL para dentro do contêiner
+      - ./out:/app/out # Mapeia o diretório de saída para dentro do contêiner
     depends_on:
       db:
         condition: service_healthy
