em tese funciona mas a contagem de blocos ta merda

--- a/tp2/Makefile
+++ b/tp2/Makefile
@@ -1,2 +1,10 @@
-build:
-	g++ -std=c++17 -O2 -Iinclude src/indice_primario.cpp -o bin/upload_indicePrimario
+hashing:
+	g++ -o hash src/main.cpp src/hashing_file.cpp -std=c++17 
+
+primary:
+	g++ -std=c++17 -O2 -Iinclude src/indice_primario.cpp -o src/upload_indicePrimario
+
+seek1:
+	g++ -std=c++17 -O2 src/seek1.cpp -o src/seek1
+
+	
