--- a/tp2/Dockerfile
+++ b/tp2/Dockerfile
@@ -1,29 +1,17 @@
-# 1. Imagem Base
-FROM debian:bookworm-slim
-
-# 2. Instala as dependências
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    g++ \
-    make \
-    && rm -rf /var/lib/apt/lists/*
-
-# 3. Define o diretório de trabalho
+# ====== Build ======
+FROM gcc:13 AS build
 WORKDIR /app
+COPY . .
+RUN make clean || true && rm -rf bin && make -B build
 
-# 4. Copia todos os arquivos
-COPY . /app
-
-# 5. Compila o projeto
-RUN make build
-
-# 6. Define os volumes
-VOLUME ["/data", "/bin"]
-
-# 7. Define variáveis de ambiente - MODIFICADO
+# ====== Runtime ======
+FROM gcc:13
+WORKDIR /app
+COPY --from=build /app/bin /app/bin
 ENV DATA_DIR=/data \
-    BIN_DIR=/bin \
+    DB_DIR=/data/db \
+    BIN_DIR=/app/bin \
     CSV_PATH=/data/artigo.csv \
     LOG_LEVEL=info
-
-# 8. Comando padrão
-CMD ["bash", "-c", "echo 'Imagem construida. Use docker run para executar os programas.' && ls -l /app/bin"]
+VOLUME ["/data"]
+CMD ["bash", "-lc", "echo 'Imagem pronta'; ls -l /app/bin && strings /usr/lib/x86_64-linux-gnu/libstdc++.so.6 | grep GLIBCXX_3.4.32 | head -n1 || true"]
